--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 appnope==0.1.4
 argon2-cffi==25.1.0
@@ -18,6 +19,7 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+-e git+ssh://git@github.com/de-lachende-cavalier/elope.git@413ce127e5e3b06b61cff613c0a435bba060f043#egg=elope
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
@@ -28,6 +30,7 @@ h11==0.16.0
 h5py==3.14.0
 httpcore==1.0.9
 httpx==0.28.1
+hydra-core==1.3.2
 idna==3.10
 ipykernel==6.29.5
 ipython==9.3.0
@@ -66,6 +69,7 @@ networkx==3.5
 notebook==7.4.3
 notebook_shim==0.2.4
 numpy==2.3.1
+omegaconf==2.3.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.0
