--- a/conf/ideas/idea_one.yaml
+++ b/conf/ideas/idea_one.yaml
@@ -7,19 +7,36 @@ global:
 nets:
   device: "cpu"
 
+  # the kernel size of the conv layers
+  conv_ker_size: 3
+  # the stride of the conv layers
+  conv_stride: 1
+  # the padding of the conv layers (specified as per pytorch convention)
+  conv_padding: 1
+  # the dielation of the conv layers
+  conv_dilation: 1
+  # the kernel size of the pooling layers
+  pool_ker_size: 2
   # the desired number of frames in the stack, after passing the stack through the 3D convs
-  N_out_conv: 400 
+  N_out_conv: 64
   # the hidden dims for each layer of the convnet 
   conv_dims: [16, 32, 64]
   # the dimension of the output layer of the events FC net
   events_fc_out: 32
-  # the hidden dims for each layer of the FC trajectory net 
 
+  # the hidden dims for each layer of the FC trajectory net 
   traj_dims: [16, 32] 
   # the output dimension of the FC trajectory net
   traj_out: 32
-  # the hidden dims of the final FC network
 
+  # the hidden dim of the rangemeter net's GRU component
+  range_gru_hdim: 16
+  # the hidden dims for the rangemeter net
+  range_dims: [16, 32]
+  # the output dimension of the rangemeter net
+  range_out: 32
+
+  # the hidden dims of the final FC network
   final_dims: [64, 92, 64]
   # the output dimension of the FC final net
   final_out: 128
