--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
--e git+ssh://git@github.com/de-lachende-cavalier/elope.git@413ce127e5e3b06b61cff613c0a435bba060f043#egg=elope
+-e git+ssh://git@github.com/de-lachende-cavalier/elope.git@cc2e6aae4678a7886b81c8475f74cf25077c541b#egg=elope
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
@@ -107,6 +107,7 @@ terminado==0.18.1
 tinycss2==1.4.0
 torch==2.7.1
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.14.0
