--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 appnope==0.1.4
@@ -19,13 +20,13 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
--e git+ssh://git@github.com/de-lachende-cavalier/elope.git@cc2e6aae4678a7886b81c8475f74cf25077c541b#egg=elope
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 fonttools==4.58.4
 fqdn==1.5.1
 fsspec==2025.5.1
+grpcio==1.75.1
 h11==0.16.0
 h5py==3.14.0
 httpcore==1.0.9
@@ -56,6 +57,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
+Markdown==3.9
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
@@ -80,6 +82,7 @@ pillow==11.2.1
 platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+protobuf==6.33.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -103,6 +106,8 @@ sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
 sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 terminado==0.18.1
 tinycss2==1.4.0
 torch==2.7.1
@@ -118,4 +123,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 widgetsnbextension==4.0.14
